manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: life-game
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: ingress
spec:
  rules:
    - host: life-game.nimil.dev
      http:
        paths:
          - backend:
              serviceName: life-game
              servicePort: 80
  tls:
    - hosts:
        - life-game.nimil.dev
      secretName: life-game-cert
